--- a/Course/01-HTML-Git-CSS/01-Activities/06-Stu_HTML/Unsolved/index.html
+++ b/Course/01-HTML-Git-CSS/01-Activities/06-Stu_HTML/Unsolved/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Firt Web page</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Student Bio</title>
-  </head>
+<body>
+  <navbar>
 
-  <body>
-    <!-- TODO: Write Your Code Below-->
+  </navbar>
 
-  </body>
+  <header>
+    <h1>Student Bio</h1>
+  </header>
 
+  <main>
+    <section>
+      <h2>Diego</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" alt="Imagem do Pingueim do linux">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ipsum minus id sint eius voluptas quod blanditiis autem non, porro in nulla quos et corrupti tempore, architecto accusamus ipsam rerum.</p>
+    </section>
+    <section>
+      <h3>your contact info</h3>
+      <ul>
+        <li><a href="diegopsantos05@gmail.com">E-mail</a></li>
+        <li><a href="https://github.com/DiegoPS025">GitHub</a></li>
+        <li><a href="https://github.com/DiegoPS025/portfolio">Portfolio</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    
+  </footer>
+</body>
 </html>
