--- a/Course/01-HTML-Git-CSS/01-Activities/05-Ins_HTML/index.html
+++ b/Course/01-HTML-Git-CSS/01-Activities/05-Ins_HTML/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
-<html lang="en-US">
-
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello HTML!</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  
+</body>
+</html>
 
   <body>
+    <nav>
+      <a href="google.com">pokemon</a>
+      <a href="google.com">digimon</a>
+      <a href="google.com">she-ra</a>
+      <a href="google.com">he-man</a>
+    </nav>
     <header>
       <!-- Headers -->
-      <h1>Hello World!</h1>
-      <h2>Hello World!</h2>
+      <h1 id="pink" >Hello World!</h1>
+      <h2 class="element-red" >Hello World!</h2>
       <h3>Hello World!</h3>
-      <h4>Hello World!</h4>
+      <h4 class="element-red" >Hello World!</h4>
       <h5>Hello World!</h5>
-      <h6>Hello World!</h6>
+      <h6 class="element-red" >Hello World!</h6>
     </header>
 
     <section>
       <!-- Image -->
-      <img src="https://via.placeholder.com/200" alt="placeholder image"/>
-
+      <img src="https://s2-ge.glbimg.com/ddcR21ypSUku34q05O6_hn0BtFY=/0x0:1200x675/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2021/1/4/BY3VzHQSyGLbPjQDQ7mA/pokemon.jpg" />
       <!-- Paragraph -->
       <p>This is a paragraph.</p>
       <p>This is a paragraph with <strong>BOLDED TEXT</strong>.</p>
     
        <!-- Unordered list -->
-       <ul>
+       <ol>
         <li>This is list item one</li>
         <li>This is list item two</li>
         <li>This is list item three</li>
-      </ul>
+      </ol>
 
       <!-- Link -->
       <a href="https://www.google.com">This is a link to Google.com</a>
